# cash-gpt

./: pyproject.toml
app/: appfactory.py
app/api/finance/: finance_routers.py  finance_schemas.py
app/common/: constants.py  enums.py  models.py
app/common/env_files/: .common_env
app/services/: llm.py  object_storage.py  transactions_management.py
