[tool.poetry]
name = "cash-gpt"
version = "0.1.0"
description = ""
authors = ["lauderdice"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "1.2.3"
annotated-types = "0.6.0"
anyio = "3.7.1"
asgiref = "3.7.2"
blinker = "1.7.0"
certifi = "2023.7.22"
click = "8.1.7"
distro = "1.8.0"
exceptiongroup = "1.1.3"
flask = "3.0.0"
flask-pydantic-api = "0.10.0"
flask-pydantic-spec = "0.5.0"
h11 = "0.14.0"
httpcore = "1.0.2"
httpx = "0.25.1"
idna = "3.4"
importlib-metadata = "6.8.0"
inflection = "0.5.1"
install = "1.3.5"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
openapi-schema-pydantic = "1.2.4"
pydantic = "1.10.13"
pydantic-core = "2.10.1"
python-dotenv = "1.0.0"
sniffio = "1.3.0"
tqdm = "4.66.1"
typing-extensions = "4.8.0"
werkzeug = "3.0.1"
zipp = "3.17.0"
flask-httpauth = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
